# DocuMind

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt  setup.py
config/: settings.py
projects/agent_executor/: code.py
projects/api/: README.md
projects/api/book_api/: app.py  books.json
projects/api/documented_simple/: app.py
projects/api/files/: app.py
projects/api/simple/: app.py
projects/bm25_based_rag/: code.py
projects/chainlit_prototype/: README.md
projects/chainlit_prototype/actions/: app.py
projects/chainlit_prototype/ask/: app.py
projects/chainlit_prototype/chat_profile/: app.py
projects/chainlit_prototype/domain_chatbot/: app.py
projects/chainlit_prototype/extra_elements/: app.py  parrot.py
projects/chainlit_prototype/prototype/: app.py
projects/chainlit_prototype/settings/: app.py
projects/chainlit_prototype/simple/: app.py
projects/chainlit_prototype/user_session/: app.py
projects/document_processing/: pdf_loader.py  splitting.py  web_loader.py
projects/domain_chatbot/: code.py
projects/embeddings/: myCode.py
projects/langchain_tools/: code.py
projects/langgraph_agent/: code.py
projects/langgraph_simple/: code.py
projects/multilingual_e5/: myCode.py
projects/multilingual_e5_base/: myCode.py
projects/output-parser/: code.py
projects/react/: code.py
projects/simple-bot/: code.py
projects/simple_bot/: code.py
projects/vector_store/: myCode.py
src/: __init__.py
src/agent/: __init__.py  core.py  tools.py
tests/: test_agent.py
(+3 files in other folders)
