[project]
name = "docu-mind"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.93.2",
    "python-dotenv>=1.1.1",
    "langchain-openai>=0.3.7",
    "langchain-core>=0.3.20",
    "pydantic>=2.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "wikipedia>=1.4.0",
]
