[project]
name = "docu-mind"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.93.2",
    "python-dotenv>=1.1.1",
    "langchain-openai>=0.3.7",
    "langchain-core>=0.3.20",
    "pydantic>=2.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "wikipedia>=1.4.0",
    "langgraph>=0.5.3",
    "rank-bm25>=0.2.2",
    "langchain-huggingface>=0.3.0",
    "sentence-transformers>=5.0.0",
    "pypdf>=5.8.0",
    "chainlit>=2.6.3",
    "matplotlib>=3.10.3",
    "fastapi[standard]>=0.115.14",
]
